--- a/cheatsheet.ipynb
+++ b/cheatsheet.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +62,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1  1  3  5  7]\n",
+      "[-1  1  3  5  7]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(A + B)\n",
+    "A + B\n",
+    "type(print(A + B))    #NoneType\n",
+    "type(A + B)           #numpy.ndarray"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +120,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False  True False  True  True False False  True False False]\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False,  True, False,  True,  True, False, False,\n",
+       "        True, False, False])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = A > 4\n",
+    "print(B)\n",
+    "print(B.sum())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,7 +163,8 @@
    "outputs": [],
    "source": [
     "A = [True, False, True, False]\n",
-    "B = [False, True, True, False]"
+    "B = [False, True, True, False]\n",
+    "#Achtung! Noch Listen nicht arrays, siehe \"Jupyter\""
    ]
   },
   {
@@ -127,10 +176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[False False  True False]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array(A)\n",
+    "B = np.array(B)\n",
+    "C = np.logical_and (A[True], B[True])\n",
+    "print(C)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,10 +228,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(min(A))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,10 +254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A.index(min(A)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,10 +302,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[47], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m11\u001b[39m) :\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28mslice\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mA\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mslice\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(11) :\n",
+    "    slice = A[:, 1+i]\n",
+    "    print(slice)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -285,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
