--- a/cheatsheet.ipynb
+++ b/cheatsheet.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,25 +302,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[47], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m11\u001b[39m) :\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28mslice\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mA\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mslice\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
+      "[12]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "[11, 12]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[10, 11, 12]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "[9, 10, 11, 12]\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[8, 9, 10, 11, 12]\n",
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[7, 8, 9, 10, 11, 12]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[6, 7, 8, 9, 10, 11, 12]\n",
+      "[1, 2, 3, 4]\n",
+      "[5, 6, 7, 8, 9, 10, 11, 12]\n",
+      "[1, 2, 3]\n",
+      "[4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+      "[1, 2]\n",
+      "[3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+      "[1]\n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n"
      ]
     }
    ],
    "source": [
     "for i in range(11) :\n",
-    "    slice = A[:, 1+i]\n",
-    "    print(slice)"
+    "    slice = A[: -1-i]\n",
+    "    slice_2 = A[-1 -i :]\n",
+    "    print(slice)\n",
+    "    print(slice_2)\n",
+    " "
    ]
   },
   {
@@ -334,12 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "def truncate_list(A, num):\n",
-    "    ..."
+    "    num = A[:num]\n",
+    "    return num\n",
+    "    "
    ]
   },
   {
@@ -351,12 +373,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "A3 = truncate_list(A, 3)\n",
-    "..."
+    "print(A3)\n",
+    "\n",
+    "#Print the sum\n",
+    "print(sum(A3))\n",
+    "\n",
+    "#Print the product\n",
+    "print(np.prod(A3))"
    ]
   },
   {
