Kommentare aus der Besprechung - Überarbeiten

--- a/cheatsheet.ipynb
+++ b/cheatsheet.ipynb
@@ -144,7 +144,8 @@
    "source": [
     "B = A > 4\n",
     "print(B)\n",
-    "print(B.sum())"
+    "print(B.sum())\n",
+    "#print(sum(B)) aus Lsg"
    ]
   },
   {
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +192,8 @@
     "A = np.array(A)\n",
     "B = np.array(B)\n",
     "C = np.logical_and (A[True], B[True])\n",
-    "print(C)"
+    "print(C)\n",
+    "# oder C =np.logical_and(A,B)"
    ]
   },
   {
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +268,10 @@
     }
    ],
    "source": [
-    "print(A.index(min(A)))"
+    "print(A.index(min(A)))\n",
+    "#auch mit for-Schleife mit enamurate mgl\n",
+    "#oder auch mit np.min mgl\n",
+    "#np.ak.min oder so ## Funktion nachgucken"
    ]
   },
   {
@@ -302,35 +307,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
-      "[12]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "[11, 12]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "[10, 11, 12]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8]\n",
-      "[9, 10, 11, 12]\n",
-      "[1, 2, 3, 4, 5, 6, 7]\n",
-      "[8, 9, 10, 11, 12]\n",
-      "[1, 2, 3, 4, 5, 6]\n",
-      "[7, 8, 9, 10, 11, 12]\n",
-      "[1, 2, 3, 4, 5]\n",
-      "[6, 7, 8, 9, 10, 11, 12]\n",
-      "[1, 2, 3, 4]\n",
-      "[5, 6, 7, 8, 9, 10, 11, 12]\n",
-      "[1, 2, 3]\n",
-      "[4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
-      "[1, 2]\n",
-      "[3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
-      "[1]\n",
-      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n"
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11] [12]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10] [11, 12]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9] [10, 11, 12]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8] [9, 10, 11, 12]\n",
+      "[1, 2, 3, 4, 5, 6, 7] [8, 9, 10, 11, 12]\n",
+      "[1, 2, 3, 4, 5, 6] [7, 8, 9, 10, 11, 12]\n",
+      "[1, 2, 3, 4, 5] [6, 7, 8, 9, 10, 11, 12]\n",
+      "[1, 2, 3, 4] [5, 6, 7, 8, 9, 10, 11, 12]\n",
+      "[1, 2, 3] [4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+      "[1, 2] [3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+      "[1] [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n"
      ]
     }
    ],
@@ -338,9 +332,14 @@
     "for i in range(11) :\n",
     "    slice = A[: -1-i]\n",
     "    slice_2 = A[-1 -i :]\n",
-    "    print(slice)\n",
-    "    print(slice_2)\n",
-    " "
+    "\n",
+    "    #print(slice)\n",
+    "    #print(slice_2)\n",
+    "\n",
+    "    print(slice, slice_2)\n",
+    "\n",
+    " #andere Lösung auf Bild (2)\n",
+    " #auch mit enamurate mgl "
    ]
   },
   {
@@ -373,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +393,9 @@
     "print(sum(A3))\n",
     "\n",
     "#Print the product\n",
-    "print(np.prod(A3))"
+    "print(np.prod(A3))\n",
+    "\n",
+    "#andere Lsg noch auf Bild"
    ]
   },
   {
