--- a/segm_threshold.ipynb
+++ b/segm_threshold.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7ca5fc145cd0>"
+       "<matplotlib.colorbar.Colorbar at 0x7ca5fc485cd0>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -83,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ca5f6ea2c00>"
+       "<matplotlib.image.AxesImage at 0x7ca5f7a27560>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,24 +142,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "244915.59993061013\n"
+      "0.96362949886221\n"
      ]
     }
    ],
    "source": [
     "# Die beiden binären Images die ich vgl sind X2 und X3\n",
-    "    #X2 ist noch in True/False bools angegeben -> trd mgl?\n",
+    "#Je näher der Wert an 1, desto mehr Überlappung zwischen X2 und X3\n",
     "\n",
     "G = X2.sum()\n",
     "H = X3.sum()\n",
-    "Dice = (2 * G * H)/(G + H)\n",
+    "X4 = X2 * X3\n",
+    "J = X4.sum()\n",
+    "Dice = (2 * J)/(G + H)\n",
     "print(Dice)"
    ]
   }
