kleine Änderung, später fertig

--- a/sobel.ipynb
+++ b/sobel.ipynb
@@ -65,15 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sobel_h(img):\n",
-    "   1/8 * np.array([[1, 0, -1], [2, 0, -2], [1, 0, -1]])\n",
+    "   h = 1/8 * np.array([[1, 0, -1], [2, 0, -2], [1, 0, -1]])\n",
+    "   return h\n",
     "    \n",
     "def sobel_v(img):\n",
-    "    1/8 * np.array([[1, 2, 1], [0, 0, 0], [-1, -2, -1]])"
+    "   v = 1/8 * np.array([[1, 2, 1], [0, 0, 0], [-1, -2, -1]])\n",
+    "   return v"
    ]
   },
   {
@@ -85,15 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "None\n"
+      "[[ 0.125  0.    -0.125]\n",
+      " [ 0.25   0.    -0.25 ]\n",
+      " [ 0.125  0.    -0.125]]\n",
+      "[[ 0.125  0.25   0.125]\n",
+      " [ 0.     0.     0.   ]\n",
+      " [-0.125 -0.25  -0.125]]\n"
      ]
     }
    ],
