comment aus Besprechung

--- a/segm_threshold.ipynb
+++ b/segm_threshold.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,9 @@
     "#\"An image img is binary if img.dtype is bool.\"\n",
     "plt.figure(figsize=(15,8))\n",
     "plt.imshow(X2, cmap='gray', vmin=0, vmax=1)\n",
-    "#help(plt.imshow)\n"
+    "#help(plt.imshow)\n",
+    "\n",
+    "#andere Lösung siehe Bild\n"
    ]
   },
   {
