--- a/otsu.ipynb
+++ b/otsu.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x73a84411ac00>"
+       "<matplotlib.image.AxesImage at 0x7e45b83a26c0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "<BarContainer object of 256 artists>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -140,164 +140,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[     0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      1   1384\n",
-      " 125478 550322 344173  75814  24801  13631   9139   7390   6743   6930\n",
-      "   7925   9887  12317  14632  16123  17400  17530  16781  14933  13171\n",
-      "  10956   8972   7379   6163   5237   4491   3962   3382   2841   2505\n",
-      "   2069   1779   1397   1194   1012    885    733    639    554    518\n",
-      "    419    371    302    262    259    205    167    155    145    118\n",
-      "    100    103     73     87     65     54     42     35     22     23\n",
-      "     14     13      7     13      7      6      5      3      2      3\n",
-      "      0      0      1      0      1      1      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0      0      0      0      0\n",
-      "      0      0      0      0      0      0]\n",
-      "Help on _ArrayFunctionDispatcher in module numpy:\n",
-      "\n",
-      "var(a, axis=None, dtype=None, out=None, ddof=0, keepdims=<no value>, *, where=<no value>)\n",
-      "    Compute the variance along the specified axis.\n",
-      "\n",
-      "    Returns the variance of the array elements, a measure of the spread of a\n",
-      "    distribution.  The variance is computed for the flattened array by\n",
-      "    default, otherwise over the specified axis.\n",
-      "\n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    a : array_like\n",
-      "        Array containing numbers whose variance is desired.  If `a` is not an\n",
-      "        array, a conversion is attempted.\n",
-      "    axis : None or int or tuple of ints, optional\n",
-      "        Axis or axes along which the variance is computed.  The default is to\n",
-      "        compute the variance of the flattened array.\n",
-      "\n",
-      "        .. versionadded:: 1.7.0\n",
-      "\n",
-      "        If this is a tuple of ints, a variance is performed over multiple axes,\n",
-      "        instead of a single axis or all the axes as before.\n",
-      "    dtype : data-type, optional\n",
-      "        Type to use in computing the variance.  For arrays of integer type\n",
-      "        the default is `float64`; for arrays of float types it is the same as\n",
-      "        the array type.\n",
-      "    out : ndarray, optional\n",
-      "        Alternate output array in which to place the result.  It must have\n",
-      "        the same shape as the expected output, but the type is cast if\n",
-      "        necessary.\n",
-      "    ddof : int, optional\n",
-      "        \"Delta Degrees of Freedom\": the divisor used in the calculation is\n",
-      "        ``N - ddof``, where ``N`` represents the number of elements. By\n",
-      "        default `ddof` is zero.\n",
-      "    keepdims : bool, optional\n",
-      "        If this is set to True, the axes which are reduced are left\n",
-      "        in the result as dimensions with size one. With this option,\n",
-      "        the result will broadcast correctly against the input array.\n",
-      "\n",
-      "        If the default value is passed, then `keepdims` will not be\n",
-      "        passed through to the `var` method of sub-classes of\n",
-      "        `ndarray`, however any non-default value will be.  If the\n",
-      "        sub-class' method does not implement `keepdims` any\n",
-      "        exceptions will be raised.\n",
-      "\n",
-      "    where : array_like of bool, optional\n",
-      "        Elements to include in the variance. See `~numpy.ufunc.reduce` for\n",
-      "        details.\n",
-      "\n",
-      "        .. versionadded:: 1.20.0\n",
-      "\n",
-      "    Returns\n",
-      "    -------\n",
-      "    variance : ndarray, see dtype parameter above\n",
-      "        If ``out=None``, returns a new array containing the variance;\n",
-      "        otherwise, a reference to the output array is returned.\n",
-      "\n",
-      "    See Also\n",
-      "    --------\n",
-      "    std, mean, nanmean, nanstd, nanvar\n",
-      "    :ref:`ufuncs-output-type`\n",
-      "\n",
-      "    Notes\n",
-      "    -----\n",
-      "    The variance is the average of the squared deviations from the mean,\n",
-      "    i.e.,  ``var = mean(x)``, where ``x = abs(a - a.mean())**2``.\n",
-      "\n",
-      "    The mean is typically calculated as ``x.sum() / N``, where ``N = len(x)``.\n",
-      "    If, however, `ddof` is specified, the divisor ``N - ddof`` is used\n",
-      "    instead.  In standard statistical practice, ``ddof=1`` provides an\n",
-      "    unbiased estimator of the variance of a hypothetical infinite population.\n",
-      "    ``ddof=0`` provides a maximum likelihood estimate of the variance for\n",
-      "    normally distributed variables.\n",
-      "\n",
-      "    Note that for complex numbers, the absolute value is taken before\n",
-      "    squaring, so that the result is always real and nonnegative.\n",
-      "\n",
-      "    For floating-point input, the variance is computed using the same\n",
-      "    precision the input has.  Depending on the input data, this can cause\n",
-      "    the results to be inaccurate, especially for `float32` (see example\n",
-      "    below).  Specifying a higher-accuracy accumulator using the ``dtype``\n",
-      "    keyword can alleviate this issue.\n",
-      "\n",
-      "    Examples\n",
-      "    --------\n",
-      "    >>> a = np.array([[1, 2], [3, 4]])\n",
-      "    >>> np.var(a)\n",
-      "    1.25\n",
-      "    >>> np.var(a, axis=0)\n",
-      "    array([1.,  1.])\n",
-      "    >>> np.var(a, axis=1)\n",
-      "    array([0.25,  0.25])\n",
-      "\n",
-      "    In single precision, var() can be inaccurate:\n",
-      "\n",
-      "    >>> a = np.zeros((2, 512*512), dtype=np.float32)\n",
-      "    >>> a[0, :] = 1.0\n",
-      "    >>> a[1, :] = 0.1\n",
-      "    >>> np.var(a)\n",
-      "    0.20250003\n",
-      "\n",
-      "    Computing the variance in float64 is more accurate:\n",
-      "\n",
-      "    >>> np.var(a, dtype=np.float64)\n",
-      "    0.20249999932944759 # may vary\n",
-      "    >>> ((1-0.55)**2 + (0.1-0.55)**2)/2\n",
-      "    0.2025\n",
-      "\n",
-      "    Specifying a where argument:\n",
-      "\n",
-      "    >>> a = np.array([[14, 8, 11, 10], [7, 9, 10, 11], [10, 15, 5, 10]])\n",
-      "    >>> np.var(a)\n",
-      "    6.833333333333333 # may vary\n",
-      "    >>> np.var(a, where=[[True], [True], [False]])\n",
-      "    4.0\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(h)\n",
-    "#erstellen einer Liste oder Array mit den Intensitätsvarianz bei Intensität T \n",
-    "var1 = np.var(h)\n",
-    "help(np.var)\n",
-    "#erstellen eines Arrays oder Liste mit der Anzahl von Pixeln bei Intensität T"
+    "def otsu(h):\n",
+    "    for t in range(256) :\n",
+    "        slice = h[0, t-1]\n",
+    "        slice_2 = h[t, 255]\n",
+    "    n1 = slice\n",
+    "    n2 = slice_2\n",
+    "    sigma = np.var(slice) * np.var(slice)\n",
+    "    sigma2 = np.var(slice_2) * np.var(slice_2)\n",
+    "    print(min = n1 * sigma + n2 * sigma2)\n",
+    "    return(h)\n",
+    "\n"
    ]
   },
   {
@@ -309,10 +166,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function min in module builtins:\n",
+      "\n",
+      "min(...)\n",
+      "    min(iterable, *[, default=obj, key=func]) -> value\n",
+      "    min(arg1, arg2, *args, *[, key=func]) -> value\n",
+      "\n",
+      "    With a single iterable argument, return its smallest item. The\n",
+      "    default keyword-only argument specifies an object to return if\n",
+      "    the provided iterable is empty.\n",
+      "    With two or more arguments, return the smallest argument.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(min)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
