--- a/otsu.ipynb
+++ b/otsu.ipynb
@@ -140,10 +140,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Funktioniert garnicht\n",
     "def otsu(h):\n",
     "    for t in range(256) :\n",
     "        slice = h[0, t-1]\n",
@@ -153,8 +154,55 @@
     "    sigma = np.var(slice) * np.var(slice)\n",
     "    sigma2 = np.var(slice_2) * np.var(slice_2)\n",
     "    print(min = n1 * sigma + n2 * sigma2)\n",
-    "    return(h)\n",
-    "\n"
+    "    return(h)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimaler Schwellenwert T: 31\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Leerer Array, in dem der T mit min gespeichert wird\n",
+    "minimal_T = np.array(0)\n",
+    "#Anzahl aller Pixel\n",
+    "total_pixels = np.sum(h)\n",
+    "# Hilfsvariablen für die Berechnung\n",
+    "T_values = range(1, 256)  # Schwellenwerte von 1 bis 255\n",
+    "min_within_class_variance = float(\"inf\")  # Minimaler Wert\n",
+    "\n",
+    "for T in T_values:\n",
+    "    # Klasse 1: Bereich [0, T-1]\n",
+    "    n1 = np.sum(h[0:T])  # Anzahl Pixel in Klasse 1\n",
+    "    if n1 == 0:  # Keine Pixel in Klasse 1\n",
+    "        continue\n",
+    "    mean1 = np.sum([i * h[i] for i in range(T)]) / n1  # Mittelwert Klasse 1\n",
+    "    var1 = np.var([i for i in range(T) for _ in range(h[i])])  # Varianz Klasse 1\n",
+    "\n",
+    "    # Klasse 2: Bereich [T, 255]\n",
+    "    n2 = total_pixels - n1  # Anzahl Pixel in Klasse 2\n",
+    "    if n2 == 0:  # Keine Pixel in Klasse 2\n",
+    "        continue\n",
+    "    mean2 = np.sum([i * h[i] for i in range(T, 256)]) / n2  # Mittelwert Klasse 2\n",
+    "    var2 = np.var([i for i in range(T, 256) for _ in range(h[i])])  # Varianz Klasse 2\n",
+    "\n",
+    "    # Gewichtete Varianz innerhalb der Klassen\n",
+    "    within_class_variance = n1 * var1 + n2 * var2\n",
+    "\n",
+    "    # Prüfen, ob dies die minimalste Varianz ist\n",
+    "    if within_class_variance < min_within_class_variance:\n",
+    "        min_within_class_variance = within_class_variance\n",
+    "        optimal_T = T\n",
+    "\n",
+    "print(f\"Optimaler Schwellenwert T: {optimal_T}\")"
    ]
   },
   {
@@ -166,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -187,9 +235,7 @@
      ]
     }
    ],
-   "source": [
-    "help(min)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
