--- a/otsu.ipynb
+++ b/otsu.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7e45b3e12570>"
+       "<matplotlib.image.AxesImage at 0x789529077770>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "<BarContainer object of 256 artists>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,21 +195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[37 39 38 ... 20 20 19]\n",
-      " [41 38 38 ... 20 21 21]\n",
-      " [38 38 40 ... 21 21 20]\n",
-      " ...\n",
-      " [22 21 22 ... 24 23 23]\n",
-      " [22 23 22 ... 24 23 24]\n",
-      " [22 21 22 ... 24 24 23]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x789528f3e3f0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -226,7 +223,7 @@
     "seg_o = img8 >= optimal_T #erzeugt eine True/False Array davon abhängig ob die die Werte von img8 über den T liegen oder nicht \n",
     "plt.figure(figsize=(15,8))\n",
     "plt.imshow(seg_o, cmap='gray', vmin=0, vmax=1)\n",
-    "print(img8)"
+    "#print(img8)"
    ]
   },
   {
@@ -238,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
