Anmerkungen aus der Besprechung

--- a/otsu_batch.ipynb
+++ b/otsu_batch.ipynb
@@ -189,7 +189,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Anwendungen auf mehrere Bilder gleichzeitig anwenden\n",
+    "#siehe Bild\n",
+    "# vorletzter Ergebniss ist nicht richtig"
+   ]
   }
  ],
  "metadata": {
