--- a/fourier.ipynb
+++ b/fourier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -126,10 +126,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7a370842af60>"
+       "<matplotlib.colorbar.Colorbar at 0x7d514da69730>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7a3708395340>"
+       "<matplotlib.image.AxesImage at 0x7d514b6a42f0>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -275,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7a37082400b0>"
+       "<matplotlib.image.AxesImage at 0x7d514d737800>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -324,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7a37082c9a60>"
+       "<matplotlib.image.AxesImage at 0x7d514b62c5f0>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -356,16 +356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7a37082db590>"
+       "<matplotlib.image.AxesImage at 0x7d5149d70620>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -404,16 +404,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7a37080f5790>"
+       "<matplotlib.colorbar.Colorbar at 0x7d5149db04d0>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,16 +478,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7a36fb99b8c0>"
+       "<matplotlib.image.AxesImage at 0x7d514d8045f0>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -522,16 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7a36fb9ebe60>"
+       "<matplotlib.image.AxesImage at 0x7d5149c445f0>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -667,26 +667,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_674/3167241422.py:13: RuntimeWarning: divide by zero encountered in log\n",
+      "/tmp/ipykernel_50845/3167241422.py:13: RuntimeWarning: divide by zero encountered in log\n",
       "  plt.imshow(np.log(amp_b_low), 'gray')\n",
-      "/tmp/ipykernel_674/3167241422.py:17: RuntimeWarning: divide by zero encountered in log\n",
+      "/tmp/ipykernel_50845/3167241422.py:17: RuntimeWarning: divide by zero encountered in log\n",
       "  plt.imshow(np.log(amp_b_high), 'gray')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7a36fb8dd880>"
+       "<matplotlib.image.AxesImage at 0x7d5149b34080>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
@@ -738,10 +738,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7a36fafc6b10>"
+       "<matplotlib.image.AxesImage at 0x7d51495b7620>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -785,7 +785,20 @@
     "\n",
     "plt.subplot(1, 3, 3)\n",
     "plt.title(\"with highpass\")\n",
-    "plt.imshow(brain_high_mer_sr.real, 'gray')\n"
+    "plt.imshow(brain_high_mer_sr.real, 'gray')\n",
+    "\n",
+    "#print(brain_low_mer)\n",
+    "#print(brain_low_mer_s)\n",
+    "#print(brain_low_mer_st)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(e) Repeat the above steps using different filter sizes and observe the differences.\n",
+    "    mit einem filter_window_size = 150 ist das Ergebniss des lowpass \"schärfer\"; das Rauschen nach Anwendung des highpass ist stärker geworden\n",
+    "    mit einem filter_window_size = 1 ist das Ergebniss des highpass \"schärfer\"; das Ergebniss des lowpass ist nur noch Rauschen"
    ]
   },
   {
@@ -832,16 +845,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7a36fb7a0a40>"
+       "<matplotlib.image.AxesImage at 0x7d51497b7920>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
