started 4 and comments

--- a/fourier.ipynb
+++ b/fourier.ipynb
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,10 @@
     "plt.figure(figsize=(6, 6))\n",
     "plt.title(\"Low-Pass Filter Mask\")\n",
     "plt.imshow(lowpass, cmap=\"gray\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "#kürzere Lsg siehe Bild\n",
+    "#beim Lowpass werden die niedrigen Frequ erhalten"
    ]
   },
   {
@@ -730,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -789,7 +792,11 @@
     "\n",
     "#print(brain_low_mer)\n",
     "#print(brain_low_mer_s)\n",
-    "#print(brain_low_mer_st)\n"
+    "#print(brain_low_mer_st)\n",
+    "\n",
+    "#leicht andere Lsg Bild\n",
+    "#lowpass wenn man dinge in bilderr tuschiert\n",
+    "#highpass zum kanten erkennen\n"
    ]
   },
   {
@@ -820,7 +827,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calc_dft(img) :\n",
+    "    dft = np.zeros(img.shape, dtype=complex)   \n",
+    "    M, N = img.shape\n",
+    "    for u in range(M):\n",
+    "        for v in range(N):\n",
+    "            #Summieren\n",
+    "            \n",
+    "            \n",
+    "#mgl lsg Bild"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -833,8 +850,97 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on ufunc:\n",
+      "\n",
+      "exp = <ufunc 'exp'>\n",
+      "    exp(x, /, out=None, *, where=True, casting='same_kind', order='K', dtype=None, subok=True[, signature, extobj])\n",
+      "\n",
+      "    Calculate the exponential of all elements in the input array.\n",
+      "\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    x : array_like\n",
+      "        Input values.\n",
+      "    out : ndarray, None, or tuple of ndarray and None, optional\n",
+      "        A location into which the result is stored. If provided, it must have\n",
+      "        a shape that the inputs broadcast to. If not provided or None,\n",
+      "        a freshly-allocated array is returned. A tuple (possible only as a\n",
+      "        keyword argument) must have length equal to the number of outputs.\n",
+      "    where : array_like, optional\n",
+      "        This condition is broadcast over the input. At locations where the\n",
+      "        condition is True, the `out` array will be set to the ufunc result.\n",
+      "        Elsewhere, the `out` array will retain its original value.\n",
+      "        Note that if an uninitialized `out` array is created via the default\n",
+      "        ``out=None``, locations within it where the condition is False will\n",
+      "        remain uninitialized.\n",
+      "    **kwargs\n",
+      "        For other keyword-only arguments, see the\n",
+      "        :ref:`ufunc docs <ufuncs.kwargs>`.\n",
+      "\n",
+      "    Returns\n",
+      "    -------\n",
+      "    out : ndarray or scalar\n",
+      "        Output array, element-wise exponential of `x`.\n",
+      "        This is a scalar if `x` is a scalar.\n",
+      "\n",
+      "    See Also\n",
+      "    --------\n",
+      "    expm1 : Calculate ``exp(x) - 1`` for all elements in the array.\n",
+      "    exp2  : Calculate ``2**x`` for all elements in the array.\n",
+      "\n",
+      "    Notes\n",
+      "    -----\n",
+      "    The irrational number ``e`` is also known as Euler's number.  It is\n",
+      "    approximately 2.718281, and is the base of the natural logarithm,\n",
+      "    ``ln`` (this means that, if :math:`x = \\ln y = \\log_e y`,\n",
+      "    then :math:`e^x = y`. For real input, ``exp(x)`` is always positive.\n",
+      "\n",
+      "    For complex arguments, ``x = a + ib``, we can write\n",
+      "    :math:`e^x = e^a e^{ib}`.  The first term, :math:`e^a`, is already\n",
+      "    known (it is the real argument, described above).  The second term,\n",
+      "    :math:`e^{ib}`, is :math:`\\cos b + i \\sin b`, a function with\n",
+      "    magnitude 1 and a periodic phase.\n",
+      "\n",
+      "    References\n",
+      "    ----------\n",
+      "    .. [1] Wikipedia, \"Exponential function\",\n",
+      "           https://en.wikipedia.org/wiki/Exponential_function\n",
+      "    .. [2] M. Abramovitz and I. A. Stegun, \"Handbook of Mathematical Functions\n",
+      "           with Formulas, Graphs, and Mathematical Tables,\" Dover, 1964, p. 69,\n",
+      "           https://personal.math.ubc.ca/~cbm/aands/page_69.htm\n",
+      "\n",
+      "    Examples\n",
+      "    --------\n",
+      "    Plot the magnitude and phase of ``exp(x)`` in the complex plane:\n",
+      "\n",
+      "    >>> import matplotlib.pyplot as plt\n",
+      "\n",
+      "    >>> x = np.linspace(-2*np.pi, 2*np.pi, 100)\n",
+      "    >>> xx = x + 1j * x[:, np.newaxis] # a + ib over complex plane\n",
+      "    >>> out = np.exp(xx)\n",
+      "\n",
+      "    >>> plt.subplot(121)\n",
+      "    >>> plt.imshow(np.abs(out),\n",
+      "    ...            extent=[-2*np.pi, 2*np.pi, -2*np.pi, 2*np.pi], cmap='gray')\n",
+      "    >>> plt.title('Magnitude of exp(x)')\n",
+      "\n",
+      "    >>> plt.subplot(122)\n",
+      "    >>> plt.imshow(np.angle(out),\n",
+      "    ...            extent=[-2*np.pi, 2*np.pi, -2*np.pi, 2*np.pi], cmap='hsv')\n",
+      "    >>> plt.title('Phase (angle) of exp(x)')\n",
+      "    >>> plt.show()\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#mgl lsg Bild"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -886,7 +992,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#mgl lsg Bild"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -900,7 +1008,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#mgl lsg Bild"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -916,7 +1026,9 @@
     "scrolled": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#mgl lsg Bild"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -930,7 +1042,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#mgl lsg Bild"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -946,7 +1060,9 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#mgl lsg Bild"
+   ]
   }
  ],
  "metadata": {
